# heap

./: CHANGELOG.md  EvalTerm.hs  FoldTerm.hs  PPTerm.hs  SimpleTerm.hs  Term.hs  Test.hs  sep-heap.cabal
scripts/: view-mods
src/: BuildTerm.hs  EvalTerm.hs  FoldTerm.hs  Heap.hs  PPTerm.hs  PrimTerm.hs  SimpleTerm.hs  Solver.hs  Subst.hs  Term.hs
